--- a/app/components/Footer/Footer.module.scss
+++ b/app/components/Footer/Footer.module.scss
@@ -1,4 +1,3 @@
-@use "../../styles//utils/functions.scss" as fct;
 @use "../../styles/utils/variables.scss" as var;
 
 .footer {
@@ -7,12 +6,16 @@
   align-items: flex-end;
   max-width: 100%;
   width: 100%;
-  height: 10rem;
   position: relative;
+  height: 10rem;
 
-  @media screen and (max-width: var.$breakpoint-tablette) {
+  @media screen and (max-width: 1530px) {
     width: 100%;
     padding: 1rem 1rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    height: auto;
   }
 
   @media screen and (max-width: var.$breakpoint-mobile) {
