--- a/app/components/Loader/Loader.module.scss
+++ b/app/components/Loader/Loader.module.scss
@@ -1,4 +1,3 @@
-@use "../../styles/utils/functions.scss" as fct;
 @use "../../styles/utils/variables.scss" as var;
 
 .loader {
@@ -9,6 +8,6 @@
 
   .icon {
     font-size: var(--loader--icon--fontSize);
-    color: fct.map-deep-get(--loader--icon--colors);
+    color: var(--loader--icon--colors);
   }
 }
